Edited wiki page User_Guide through web user interface.

--- a/wiki/User_Guide.wiki
+++ b/wiki/User_Guide.wiki
@@ -1,6 +1,14 @@
 #summary One-sentence summary of this page.
 
 = 协议介绍 =
+    FQueue的协议基于Memcached协议。
+    == 入队 ==
+       add queuename_password flags exptime <bytes>\r\n
+       <data block>\r\n
+       或者：
+       set queuename_password flags exptime <bytes>\r\n
+       <data block>\r\n
+    == 出队 ==
 
 
 = 关于性能 =
@@ -8,4 +16,3 @@
 = 监控 =
 
 = 高可用设计 =
-
