--- a/wiki/install.wiki
+++ b/wiki/install.wiki
@@ -2,14 +2,24 @@
 ==JAVA环境==
 安装jdk6
 ==部署Fqueue==
-# 直接从google code下载压缩包，解压后./run.sh start 即可运行
-# svn check out出源代码，用maven 的mvn package即可打包出上一步使用的压缩包
+ # 直接从google code下载压缩包，解压后./run.sh start 即可运行
+ # svn check out出源代码，用maven 的mvn package即可打包出上一步使用的压缩包
 
 
 
 = 配置 =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+Fqueue的配置文件位于conf/config.properties,默认配置：
+{{{
+port=12000
+path=db
+logsize=40
+authorization=key|abc@@bbs|pass
+}}}
+ # port Fqueue的启动端口
+ # path Fqueue的数据在磁盘上的存储目录
+ # logsize Fqueue在存储数据到磁盘上时，每个文件的最大大小（单位MB）
+ # authorization 权限配置信息格式
+{{{
+   队列1|队列1的密码@@队列2|队列2的密码@@……
+}}}
