--- a/wiki/User_Guide.wiki
+++ b/wiki/User_Guide.wiki
@@ -17,7 +17,7 @@ add queuename_password_123333 flags exptime <bytes>\r\n
 <data block>\r\n
 }}}
 通过使用增加后缀的方式，可以实现client根据key做hash，实现分布式。
-flags exptime参数在0.1版本中会被忽略。即不支持memcached的过期，自动序列化和反学列化，压缩。
+flags exptime参数在0.1版本中会被忽略。即不支持memcached的过期，自动序列化和反序列化，压缩。
 == 出队 ==
 {{{
 get queuename_password\r\n
