--- a/wiki/User_Guide.wiki
+++ b/wiki/User_Guide.wiki
@@ -37,7 +37,7 @@ get clear|queuename|password\r\n
 {{{
 get reload|queuename|password\r\n
 }}}
-只需要任何一个queuename,password即可。
+只需要任何一个queuename,password即可。在运行期，可以方便增加新的队列或者更改密码。
 ==JVM监控信息==
 获取可以监控JVM的监控信息
 {{{
