Edited wiki page install through web user interface.

--- a/wiki/install.wiki
+++ b/wiki/install.wiki
@@ -20,6 +20,6 @@ authorization=key|abc@@bbs|pass
 {{{
 队列1|队列1的密码@@队列2|队列2的密码@@……
 }}}
-注意：队列名和密码不能包含“@”、"|"、,"_"字符。
+注意：队列名和密码不能包含“@”、"|"、,"_"和中文字符。
 =JVM启动配置=
 关于JVM的启动配置可以在./run.sh中修改
